fix: bg contrast

--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@
     ---c-a2: hsl(240, 15%, 45%);
     ---c-b1: hsl(225, 100%, 70%);
     ---c-b2: hsl(225, 100%, 60%);
-    ---c-bg: hsl(240, 5%, 10%);
+    ---c-bg: hsl(240, 5%, 5%);
   }
 }
 
